--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 </head>
 
 <body>
+    <h1>Date Validation and Addition Test</h1>
+    <br>
+        <hr>
     
         <input type="text" id="selecteddate">
     <br>
